syntax = "proto3";

package product;

option go_package = "./pkg/pb";

// Product Service Definition
service ProductService {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
    rpc AddProduct(AddProductRequest) returns (AddProductResponse) {}
    rpc EditProduct(EditProductRequest) returns (EditProductResponse) {}
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
    rpc ViewProducts(ViewProductsRequest) returns (ViewProductsResponse) {}
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
    rpc ReduceStock(ReduceStockRequest) returns (ReduceStockResponse);
}


// Messages for GetProducts
message GetProductsRequest {}
message GetProductsResponse {
    repeated Product products = 1;
}

// Messages for AddProduct
message AddProductRequest {
    string productName = 1;
    string description = 2;
    string imageUrl = 3;
    float price = 4;
    int32 stock = 5;
    string categoryName = 6;
}

message AddProductResponse {
    bool status = 1;
    string message = 2;
}

// Messages for EditProduct
message EditProductRequest {
    string id = 1;
    string productName = 2;
    string description = 3;
    string imageUrl = 4;
    float price = 5;
    int32 stock = 6;
    string categoryName = 7;
}

message EditProductResponse {
    bool status = 1;
    string message = 2;
}

// Messages for DeleteProduct
message DeleteProductRequest {
    string id = 1;
}
message DeleteProductResponse {
    bool status = 1;
    string message = 2;
}



message ViewProductsRequest {}
message ViewProductsResponse {
    repeated Product products = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message ReduceStockRequest {
  int64 product_id = 1; // ID of the product
  int32 quantity = 2;   // Quantity to reduce
}

message ReduceStockResponse {
  bool success = 1;     // Indicate success or failure
  string message = 2;   // Optional message
}

// Product Structure
message Product {
    string id = 1;
    string productName = 2;
    string description = 3;
    string imageUrl = 4;
    float price = 5;
    int32 stock = 6;
    string categoryName = 7;
}